Enhance Binding process
Remove `Phase` attributes from volumes, network interfaces, networks
etc. and simplify binding to be done by the 'executing' controller (e.g.
`NetworkInterface` controller tries to set `targetRef` on a `VirtualIP`).

Update related code in machinepoollet and controllers.

Update test cases.
