# gen/v3/apis__compute.api.onmetal.de__v1alpha1_openapi.json
@@ -4775,14 +4775,6 @@
 							]
 						}
 					},
-					"lastPhaseTransitionTime": {
-						"description": "LastPhaseTransitionTime is the last time the Phase transitioned.",
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/io.k8s.apimachinery.pkg.apis.meta.v1.Time"
-							}
-						]
-					},
 					"lastStateTransitionTime": {
 						"description": "LastStateTransitionTime is the last time the State transitioned.",
 						"allOf": [
@@ -4795,10 +4787,6 @@
 						"description": "Name is the name of the NetworkInterface to whom the status belongs to.",
 						"type": "string",
 						"default": ""
-					},
-					"phase": {
-						"description": "Phase is the NetworkInterface binding phase of the NetworkInterface.",
-						"type": "string"
 					},
 					"state": {
 						"description": "State represents the attachment state of a NetworkInterface.",
@@ -4867,14 +4855,6 @@
 						"description": "Handle is the MachinePool internal handle of the volume.",
 						"type": "string"
 					},
-					"lastPhaseTransitionTime": {
-						"description": "LastPhaseTransitionTime is the last time the Phase transitioned.",
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/io.k8s.apimachinery.pkg.apis.meta.v1.Time"
-							}
-						]
-					},
 					"lastStateTransitionTime": {
 						"description": "LastStateTransitionTime is the last time the State transitioned.",
 						"allOf": [
@@ -4887,10 +4867,6 @@
 						"description": "Name is the name of a volume attachment.",
 						"type": "string",
 						"default": ""
-					},
-					"phase": {
-						"description": "Phase represents the binding phase of a Volume.",
-						"type": "string"
 					},
 					"state": {
 						"description": "State represents the attachment state of a Volume.",
